# serializer version: 1
# name: TestPreviewList.test_early_access_features
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features.1
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestPreviewList.test_early_access_features.2
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestPreviewList.test_early_access_features.3
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features.4
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."api_token" = 'token123'
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features.5
  '''
  SELECT "clairview_earlyaccessfeature"."id",
         "clairview_earlyaccessfeature"."team_id",
         "clairview_earlyaccessfeature"."feature_flag_id",
         "clairview_earlyaccessfeature"."name",
         "clairview_earlyaccessfeature"."description",
         "clairview_earlyaccessfeature"."stage",
         "clairview_earlyaccessfeature"."documentation_url",
         "clairview_earlyaccessfeature"."created_at",
         "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_earlyaccessfeature"
  LEFT OUTER JOIN "clairview_featureflag" ON ("clairview_earlyaccessfeature"."feature_flag_id" = "clairview_featureflag"."id")
  WHERE ("clairview_earlyaccessfeature"."stage" = 'beta'
         AND "clairview_earlyaccessfeature"."team_id" = 2)
  '''
# ---
